[project]
name = "nextdrama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.1",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.47.1",
    "torch>=2.7.1",
]
